...
                    .font(.system(size: 100, weight: .light))
                    .truncateWithFade(width: 0.1, startingAt: 0.05)
                    .minimumScaleFactor(0.3)
                    .lineLimit(1)
                    .truncationMode(.head)
                    .textSelection(.enabled)
                    .accessibilityIdentifier("readout")
            }
            Grid(tracks: 4, spacing: 8) {
                // n.b. GridGroup is only to work around limitations in SwiftUI's ViewBuilder
                // closure typings, but I figured it doubled as a nice way to emphasize the rows.
                GridGroup {
                    CalculatorButton(.text(input.backspaced.buttonText), .gray) {
...
                    CalculatorButton(.image("divide"), .orange) { append("÷") }
                }
                GridGroup {
                    CalculatorButton(.text("'"), .gray) { append("ft") }
                    CalculatorButton(.text("\""), .gray) { append("in") }
                    CalculatorButton(.text("."), .gray) { append(".", canReplaceResult: true) }
                    CalculatorButton(.image("multiply"), .orange) { append("×") }
                }
                GridGroup {
                    CalculatorButton(.text("7"), darkGray) { append("7", canReplaceResult: true) }
                    CalculatorButton(.text("8"), darkGray) { append("8", canReplaceResult: true) }
                    CalculatorButton(.text("9"), darkGray) { append("9", canReplaceResult: true) }
                    CalculatorButton(.image("minus"), .orange) { append("-") }
...
                }
                GridGroup {
                    CalculatorButton(.text("1"), darkGray) { append("1", canReplaceResult: true) }
                    CalculatorButton(.text("2"), darkGray) { append("2", canReplaceResult: true) }
                    CalculatorButton(.text("3"), darkGray) { append("3", canReplaceResult: true) }
                }
                CalculatorButton(.image("equal"), .orange) { evaluate() }.gridSpan(row: 2)
                GridGroup {
                    CalculatorButton(.text("␣"), .gray) { append(" ", canReplaceResult: true) }
                    CalculatorButton(.text("0"), darkGray) { append("0", canReplaceResult: true) }
                    CalculatorButton(.text("⁄"), .gray) { append("/", trimmingSuffix: .whitespaceAndFractionSlash) }
                }
                GridGroup {
...
